Nueva version con ajustes de URL y archivo de config